--- a/templates/base.html
+++ b/templates/base.html
@@ -1,17 +1,58 @@
 {% load static %}
 {% load bootstrap4 %}
 <!doctype html>
-<html lang="en">
+<html lang="pt-br">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Originais</title>
+    {% bootstrap_css %}
+
+    <style>
+        body {
+            margin: 0;
+            width: 100%;
+            background-color: black;
+            color: white;
+        }
+
+        .menu {
+            height: 250px;
+            background-color: cadetblue;
+        }
+
+        .menu img{
+            width: 100%;
+            height: 100%;
+        }
+
+        .formulario {
+            width: 400px;
+            margin: 0;
+        }
+    </style>
+
 </head>
+
 <body>
 
+<div class="App">
 
+    <div class="menu">
+        <img src="{% static 'foto_praia.jpg' %}" alt="praia">
+    </div>
 
+    <center>
+        <div class="formulario">
+            {% block context %}
+            {% endblock %}
+        </div>
+    </center>
+
+</div>
 </body>
+
 </html>
