--- a/templates/form.html
+++ b/templates/form.html
@@ -1,7 +1,7 @@
 {% extends 'base.html' %}
 {% load bootstrap4 %}
 {% block context %}
-    <h1>Cadastro</h1>
+    <h1>Cadastro da igreja</h1>
     <form method="post">
         {% csrf_token %}
         {% bootstrap_form form %}
@@ -9,5 +9,4 @@
             <button type="submit" class="btn btn-primary">Salvar</button>
         {% endbuttons %}
     </form>
-
 {% endblock %}
